update doc + fix users & conv router
